Bug 55903 - UI: Zoom In (+) icon does nothing
Summary: UI: Zoom In (+) icon does nothing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: Confirmed:4.2.0.4:OSX target:4.4.0
Keywords:
: 84950 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-10-12 08:55 UTC by Dattatray
Modified: 2014-12-20 22:33 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
new tango zoom mode image (2.84 KB, application/zip)
2014-09-23 03:40 UTC, Yousuf Philips (jay) (retired)
Details
xcf images used for the creation of the tango and galaxy icons (4.99 KB, application/zip)
2014-09-24 01:34 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dattatray 2012-10-12 08:55:24 UTC
When we are clicking on zoom + icon slide size does not get changed.
So it is unusable onlu Zoom(-) is working
Comment 1 Rainer Bielefeld Retired 2012-10-12 11:40:36 UTC
Reproducible with LibO 3.4.4 (Build OOO 340m1 (402)) on Ubuntu 10.04 (VirtualBox)
Still a problem with LibO 3.5.4.2 on Ubuntu 12.4 (VirtualBox)

Still [Reproducible] with  "LibreOffice 3.6.3.1 German UI/ German Locale [Build-ID: f8fce0b] on German WIN7 Home Premium (64bit) 

Also a problem in DRAW.
Works fine in Math

Already broken with LibO 3.3.3 and in OOo 3.4.1, so seems inherited from OOo

Using number key bord '+' works fine.

@Ivan:
One for you?
Comment 2 Rainer Bielefeld Retired 2012-10-12 14:42:37 UTC
The problem is more sophisticated. Of course the botton "does" something, it makes LibO waiting for next mouse operation:
- Click somewhere into the slide: zoom to double size
- Draw a frame: zoom so that drawn frame fills screen.
Of course I know tha tall, I have been using this icon for 10 years without any problem ;-)

But there are indeed some inconsistencies and smaller problems, all observed with "LibreOffice 3.6.3.1" English UI/ German Locale [Build-ID: f8fce0b] on German WIN7 Home Premium (64bit), Tango Theme

a) Extended tip
---------------
Incomplete.

Is: 
"Displays the slide at two times its current size"
Should be:
"Displays the slide at two times its current size with next click into slide or displays the entire frame drawn with dragged mouse button into the slide with maximum size". I will submit a different bug for this.

b) Icons inconsistency
----------------------
This icon looks same as the one in Math what has a different function (increases zoom 25% with every click on icon). Icons should look different.

c) Icons inconsistency
----------------------
100% Icon (1:1) looks different in Math, I will submit a different bug for this.

d) Icons inconsistency
----------------------
Display maximum size showing all objects look different in Math and Draw, I will submit a different bug for this.

Anything forgotten?
Comment 3 tommy27 2012-11-03 07:48:16 UTC
tested on LibO 3.6.1

"+" and "-" zoom buttons work as expected.

I suppose that this is just an old 3.4.x issues that was subsequently fixed in 3.5.x and 3.6.x but probably nobody remembered to flag this as "fixed"

changing status accordingly
Comment 4 tommy27 2012-11-03 08:17:50 UTC
oopppsss.... I think that I misunderstood what really the bug was about...

you are talking about the "+" zoom toolbar icon of Draw (which indeed does not work as expected), while I was talking about the "+" zoom button at the bottom right corner (which does its job).

sorry for that... reverting status back to REOPENED
Comment 5 retired 2014-02-12 14:54:19 UTC
Confirmed:4.2.0.4:OSX

* Open new draw file
* View > Menubar > zoom
* "-" works "+" does not

:S
Comment 6 retired 2014-08-25 09:30:22 UTC
Persisting with 4.3.1.

Not sure I agree with "minor". Please using this are left with a smaller and smaller view when they run into this issue and cannot work productively in Draw.

Setting to at least "normal".
Comment 7 Maxim Monastirsky 2014-09-07 10:31:43 UTC
*** Bug 83572 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2014-09-14 13:47:49 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f5129ca7610ec4ec20ed1c00e5c94bf51d5de2cc

fdo#55903 Immediate effect for zoom in button



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Yousuf Philips (jay) (retired) 2014-09-14 14:42:06 UTC
Hi Maxim,

Wanted to suggest that you remove the .uno:ZoomPanning button and label .uno:ZoomMode as 'Zoom & Pan Tool' as 'Zoom Tool' doesnt mention that panning is possible with it.
Comment 10 Maxim Monastirsky 2014-09-14 14:54:08 UTC
(In reply to comment #9)
> Wanted to suggest that you remove the .uno:ZoomPanning button and label
> .uno:ZoomMode as 'Zoom & Pan Tool' as 'Zoom Tool' doesnt mention that
> panning is possible with it.
Thanks Jay. I also need a good icon. Right now I'm using zoomoptimal, but it doesn't fit so well.
Comment 11 Yousuf Philips (jay) (retired) 2014-09-14 15:31:34 UTC
(In reply to comment #10)
> Thanks Jay. I also need a good icon. Right now I'm using zoomoptimal, but it
> doesn't fit so well.

The zoomoptimal icon is quite nice, but you could even use the default zoom button, the icon which shows in the customize toolbar dialog for the zoom group button.
Comment 12 Yousuf Philips (jay) (retired) 2014-09-23 03:40:25 UTC
Created attachment 106700 [details]
new tango zoom mode image

Hi Maxim,

I created new large zoom mode icons for tango and galaxy and have attached it. Let me know what you think and if they are suitable, please add them. I doubt i can make suitable ones which are 16x16. :(

Submitted a patch to fix the tooltip name. https://gerrit.libreoffice.org/#/c/11596/
Comment 13 Maxim Monastirsky 2014-09-23 14:02:04 UTC
(In reply to comment #12)
> I created new large zoom mode icons for tango and galaxy and have attached
> it.
Good Work! Thanks!

> I doubt i can make suitable ones which are 16x16. :(
We can use the generic zoom icon for that.
Comment 14 Yousuf Philips (jay) (retired) 2014-09-24 01:34:51 UTC
Created attachment 106761 [details]
xcf images used for the creation of the tango and galaxy icons

here are the xcf.bz2 files used in there creation
Comment 15 Yousuf Philips (jay) (retired) 2014-10-01 00:58:30 UTC
Pushed a patch for the new icons https://gerrit.libreoffice.org/#/c/11729/
Comment 16 Maxim Monastirsky 2014-11-17 12:46:45 UTC
*** Bug 84950 has been marked as a duplicate of this bug. ***
Comment 17 Mike §chinagl 2014-12-20 22:33:40 UTC
This bug fix comes with LibreOffice 4.4 (release notes https://wiki.documentfoundation.org/ReleaseNotes/4.4) 

Creation of a new zoom mode button that is able to zoom in, zoom out and pan with the use of Ctrl and ⇧ Shift.